--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
     "functions": {
-      "api/**/*.py": {
-        "runtime": "vercel-python@0.25.0"
+      "api": {
+        "runtime": "vercel-python@0.25.0",
+        "memory": 1024
       }
     },
     "routes": [
