--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,44 @@
-cs50
-Flask
-Flask-Session
-requests
-yfinance
+aiohttp==3.8.4
+aiohttp-jinja2==1.5.1
+aiosignal==1.3.1
+appdirs==1.4.4
+async-timeout==4.0.2
+attrs==23.1.0
+beautifulsoup4==4.12.2
+blinker==1.6.2
+cachelib==0.10.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+cs50==9.2.4
+Flask==2.3.2
+Flask-Session==0.5.0
+frozendict==2.3.8
+frozenlist==1.3.3
+greenlet==2.0.2
 gunicorn==20.1.0
+html5lib==1.1
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lxml==4.9.2
+MarkupSafe==2.1.3
+multidict==6.0.4
+multitasking==0.0.11
+numpy==1.25.0
+pandas==2.0.3
+psycopg2-binary==2.9.6
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.31.0
+six==1.16.0
+soupsieve==2.4.1
 SQLAlchemy==1.4.26
-psycopg2-binary
+sqlparse==0.4.4
+termcolor==2.3.0
+tzdata==2023.3
+urllib3==2.0.3
+webencodings==0.5.1
+Werkzeug==2.3.6
+yarl==1.9.2
+yfinance==0.2.22
