--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ charset-normalizer==3.1.0
 click==8.1.3
 cs50==9.2.4
 Flask==2.3.2
+flask-redis==0.4.0
 Flask-Session==0.5.0
 frozendict==2.3.8
 frozenlist==1.3.3
@@ -30,6 +31,7 @@ pandas==2.0.3
 psycopg2-binary==2.9.6
 python-dateutil==2.8.2
 pytz==2023.3
+redis==4.6.0
 requests==2.31.0
 six==1.16.0
 soupsieve==2.4.1
